# jaba-ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  broadcast.py  config.py  database.py
app/models/: __init__.py  chat.py  group.py  menu.py  order.py  store.py  system.py  user.py
app/repositories/: __init__.py  base.py  chat_repo.py  group_repo.py  order_repo.py  store_repo.py  system_repo.py  user_repo.py
app/routers/: __init__.py  admin.py  board.py  chat.py  line_admin.py  line_webhook.py  public.py
app/services/: __init__.py  ai_service.py  cache_service.py  line_service.py  menu_service.py  order_service.py  scheduler.py
docs/: api.md  architecture.md  database.md  deployment.md  features.md  line-bot-message-flow.md  screenshots.md
migrations/: env.py
migrations/versions/: 001_initial.py  002_seed_ai_prompts.py  003_add_ai_logs.py
openspec/: project.md
openspec/specs/admin/: spec.md
openspec/specs/admin-proxy-order/: spec.md
openspec/specs/core/: spec.md
openspec/specs/database/: spec.md
openspec/specs/frontend-ui/: spec.md
openspec/specs/line-admin/: spec.md
openspec/specs/line-bot/: spec.md
openspec/specs/personal-chat/: spec.md
openspec/specs/realtime-broadcast/: spec.md
openspec/specs/security-audit/: spec.md
openspec/specs/store-management/: spec.md
scripts/: install-service.sh  jaba-ai.service  start.sh  uninstall-service.sh
static/: admin.html  board.html  line-admin.html
static/css/: style.css
static/js/: menu-manager.js
(+59 files in other folders)
